docs/envoy/v1.24.6/_sources/api-v3/config/trace/v3/zipkin.proto.rst.txt
.. _envoy_v3_api_file_envoy/config/trace/v3/zipkin.proto:

Zipkin tracer (proto)
=====================






.. _envoy_v3_api_msg_config.trace.v3.ZipkinConfig:

config.trace.v3.ZipkinConfig
----------------------------


:repo:`[config.trace.v3.ZipkinConfig proto] <api/envoy/config/trace/v3/zipkin.proto#L24>`

Configuration for the Zipkin tracer.

.. _extension_envoy.tracers.zipkin:

This extension has the qualified name ``envoy.tracers.zipkin``


.. note::
  

  This extension is intended to be robust against untrusted downstream traffic. It
  assumes that the upstream is trusted.

.. tip::
  This extension extends and can be used with the following extension category:


  - :ref:`envoy.tracers <extension_category_envoy.tracers>`



  This extension must be configured with one of the following type URLs:



  - :ref:`type.googleapis.com/envoy.config.trace.v3.ZipkinConfig <envoy_v3_api_msg_config.trace.v3.ZipkinConfig>`




.. code-block:: json
  :force:

  {
    "collector_cluster": ...,
    "collector_endpoint": ...,
    "trace_id_128bit": ...,
    "shared_span_context": {...},
    "collector_endpoint_version": ...,
    "collector_hostname": ...,
    "split_spans_for_request": ...
  }

.. _envoy_v3_api_field_config.trace.v3.ZipkinConfig.collector_cluster:


collector_cluster
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) The cluster manager cluster that hosts the Zipkin collectors.


.. _envoy_v3_api_field_config.trace.v3.ZipkinConfig.collector_endpoint:


collector_endpoint
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) The API endpoint of the Zipkin service where the spans will be sent. When
  using a standard Zipkin installation.


.. _envoy_v3_api_field_config.trace.v3.ZipkinConfig.trace_id_128bit:


trace_id_128bit
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Determines whether a 128bit trace id will be used when creating a new
  trace instance. The default value is false, which will result in a 64 bit trace id being used.


.. _envoy_v3_api_field_config.trace.v3.ZipkinConfig.shared_span_context:


shared_span_context
  (`BoolValue <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#boolvalue>`_) Determines whether client and server spans will share the same span context.
  The default value is true.


.. _envoy_v3_api_field_config.trace.v3.ZipkinConfig.collector_endpoint_version:


collector_endpoint_version
  (:ref:`config.trace.v3.ZipkinConfig.CollectorEndpointVersion <envoy_v3_api_enum_config.trace.v3.ZipkinConfig.CollectorEndpointVersion>`) Determines the selected collector endpoint version.


.. _envoy_v3_api_field_config.trace.v3.ZipkinConfig.collector_hostname:


collector_hostname
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Optional hostname to use when sending spans to the collector_cluster. Useful for collectors
  that require a specific hostname. Defaults to :ref:`collector_cluster <envoy_v3_api_field_config.trace.v3.ZipkinConfig.collector_cluster>` above.


.. _envoy_v3_api_field_config.trace.v3.ZipkinConfig.split_spans_for_request:


split_spans_for_request
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) If this is set to true, then Envoy will be treated as an independent hop in trace chain. A complete span pair will be created for a single
  request. Server span will be created for the downstream request and client span will be created for the related upstream request.
  This should be set to true in the following cases:

  * The Envoy Proxy is used as gateway or ingress.
  * The Envoy Proxy is used as sidecar but inbound traffic capturing or outbound traffic capturing is disabled.
  * Any case that the `start_child_span of router <envoy_v3_api_field_extensions.filters.http.router.v3.Router.start_child_span>` is set to true.

  .. attention::

    If this is set to true, then the
    :ref:`start_child_span of router <envoy_v3_api_field_extensions.filters.http.router.v3.Router.start_child_span>`
    SHOULD be set to true also to ensure the correctness of trace chain.


.. _envoy_v3_api_enum_config.trace.v3.ZipkinConfig.CollectorEndpointVersion:

Enum config.trace.v3.ZipkinConfig.CollectorEndpointVersion
----------------------------------------------------------


:repo:`[config.trace.v3.ZipkinConfig.CollectorEndpointVersion proto] <api/envoy/config/trace/v3/zipkin.proto#L28>`

Available Zipkin collector endpoint versions.



.. _envoy_v3_api_enum_value_config.trace.v3.ZipkinConfig.CollectorEndpointVersion.DEPRECATED_AND_UNAVAILABLE_DO_NOT_USE:


DEPRECATED_AND_UNAVAILABLE_DO_NOT_USE
  *(DEFAULT)* ⁣Zipkin API v1, JSON over HTTP.


.. _envoy_v3_api_enum_value_config.trace.v3.ZipkinConfig.CollectorEndpointVersion.HTTP_JSON:


HTTP_JSON
  ⁣Zipkin API v2, JSON over HTTP.


.. _envoy_v3_api_enum_value_config.trace.v3.ZipkinConfig.CollectorEndpointVersion.HTTP_PROTO:


HTTP_PROTO
  ⁣Zipkin API v2, protobuf over HTTP.



